<resources>
    <string name="app_name">Recepty</string>
    <string name="action_settings">Settings</string>
    <string name="add_recipe">add Recipe</string>
    <string name="nazev_receptu">Nazev receptu</string>
    <string name="uvodni_text">uvodni text</string>
    <string name="ingredients">Ingredients</string>
    <string name="vase_ingredience">vase ingredience</string>
    <string name="postup">Postup</string>
    <string name="cas">Cas</string>
    <string name="pridat">PRIDAT</string>
    <string name="star">star</string>
    <string name="privJidla">Privadla Jidla</string>
    <string name="ohodnot_tento_recept">Ohodnot tento recept</string>
</resources>
