<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <variable
            name="viewmodel"
            type="cz.ackee.cookbook.screens.addScreen.AddFragmentViewModel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:text="@{viewmodel.recipeToSend.name}"
                android:layout_height="wrap_content"
                android:hint="@string/nazev_receptu" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@{viewmodel.recipeToSend.description}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uvodni_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ingredients"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="24sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{viewmodel.recipeToSend.name}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/vase_ingredience" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pridat" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="@{viewmodel.recipeToSend.info}"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/postup" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:text="15"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="@string/cas" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</layout>